--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,7 +60,7 @@
     height: 41px;
     border-radius: 20px;
     background-color: #365422;
-    margin-left: 264px ;
+    margin-left: 264px;
     margin-top: 28px;
 }
 .btn_enregistrer{
@@ -70,6 +70,14 @@
     background-color: #365422;
     margin-left: 70% ;
     margin-top: 28px;
+}
+.btn_signer{
+    width: 215px;
+    height: 45px;
+    border-radius: 20px;
+    background-color: #41A707;
+    margin-left: 30%;
+    margin-top: 5%;
 }
 .icone{
     border-radius: 256px;
@@ -101,6 +109,14 @@ h2{
     font-style: italic;
     justify-content: center;
     align-items: center;
+}
+h3{
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-family: 'Segoe UI';
+    font-weight: bold;
+    margin-left: 15%;
+    padding: 5%;
 }
 .form-group{
     font-size: 25px;
