--- a/public/css/app.css
+++ b/public/css/app.css
@@ -118,12 +118,6 @@ h3{
     margin-left: 15%;
     padding: 5%;
 }
-.form-group{
-    font-size: 25px;
-    font-family: 'Segoe UI';
-    font-weight: bold;
-    padding: 10px;
-}
 .form-control{
     width: 295px;
     border-radius: 25px;
@@ -160,4 +154,9 @@ h3{
 }
 #createInspectionBtn,#annulerBtn {
     margin-top: 15%;
+}
+.champs_formulaire{
+    font-size: 20px;
+    font-family: 'Segoe UI';
+    padding: 10px;
 }
