edit Inspection OK

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -160,6 +160,9 @@ h3{
     position: relative;
     max-width: 100%;
 }
+.past-day {
+    background-color: #c4b0b0;
+}
 #event_form {
     z-index: 2;
     position: absolute;
