--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,12 +67,12 @@
     margin-top: 28px;
 }
 .btn_enregistrer{
-    width: 113px;
-    height: 37px;
+    background-color: #4b7430;
     border-radius: 20px;
-    background-color: #365422;
-    margin-left: 70% ;
-    margin-top: 28px;
+    font-weight: bold;
+    margin-top: 20%;
+    width: 185px;
+    height: 40px;
 }
 .btn_signer{
     width: 215px;
@@ -84,21 +84,27 @@
 }
 .btn_modifier{
     background-color: white;
-    color: black;
-    width: auto;
-    height: 41px;
     border-radius: 20px;
     font-weight: bold;
     margin-top: 20%;
+    width: 185px;
+    height: 40px;
 }
 .btn_New_rapport{
     background-color: #365422;
-    color: white;
-    width: auto;
-    height: 41px;
     border-radius: 20px;
     font-weight: bold;
     margin-top: 20%;
+    width: 185px;
+    height: 40px;
+}
+.btn_retour{
+    background-color: rgb(172, 169, 169);
+    border-radius: 20px;
+    font-weight: bold;
+    margin-top: 20%;
+    width: 185px;
+    height: 40px;
 }
 .icone{
     border-radius: 256px;
@@ -138,6 +144,12 @@ h3{
     font-weight: bold;
     margin-left: 15%;
     padding: 5%;
+}
+.titre{
+    font-weight: bold;
+    padding-bottom: 4%;
+    font-size: 22px;
+    font-style: italic;
 }
 .form-control{
     width: 295px;
