--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,6 +74,23 @@
     width: 185px;
     height: 40px;
 }
+.btn_New_rapport{
+    background-color: #4b7430;
+    border-radius: 20px;
+    font-weight: bold;
+    margin-top: 20%;
+    width: 185px;
+    height: 40px;
+    line-height: 40px;
+}
+.btn_creer{
+    background-color: #4b7430;
+    border-radius: 20px;
+    font-weight: bold;
+    margin-top: 20%;
+    width: 185px;
+    height: 40px;
+}
 .btn_signer{
     width: 215px;
     height: 45px;
@@ -89,9 +106,10 @@
     margin-top: 20%;
     width: 185px;
     height: 40px;
+    line-height: 40px;
 }
-.btn_New_rapport{
-    background-color: #365422;
+.btn_retour,.btn_retour_js{
+    background-color: rgb(206, 201, 201);
     border-radius: 20px;
     font-weight: bold;
     margin-top: 20%;
@@ -99,12 +117,24 @@
     height: 40px;
 }
 .btn_retour{
-    background-color: rgb(172, 169, 169);
+    line-height: 40px;
+}
+.btn_del_signa{
+    background-color: rgb(206, 201, 201);
+    border-radius: 20px;
+    font-weight: bold;
+    margin-top: 10%;
+    width: 185px;
+    height: 40px;
+}
+.btn_add_signa{
+    background-color: #41A707;
     border-radius: 20px;
     font-weight: bold;
     margin-top: 20%;
-    width: 185px;
-    height: 40px;
+    width: 250px;
+    height: 55px;
+    font-size: 20px;
 }
 .icone{
     border-radius: 256px;
@@ -115,10 +145,10 @@
     left: 0;
     background-color: #9D299C;
     width: 154px;
-    height: 422px;
+    height: 600px;
     border-top-right-radius: 44px;
-    border-bottom-left-radius: 44px;
-    margin-top: 121px;
+    border-bottom-right-radius: 44px;
+    margin-top: 180px;
 }
 .formulaire{
     background-color: #D4D7D9;
@@ -196,7 +226,7 @@ h3{
     font-family: 'Segoe UI';
     padding: 10px;
 }
-.detail_inspection{
+.details{
     font-size: 25px;
     font-family: 'Segoe UI';
     font-weight: bold;
@@ -210,7 +240,7 @@ h3{
     color: #CE1C00;
     font-weight: bold;
 }
-#inspectionTable{
+#inspectionTable,#tourneeTable{
     background-color: #CBC6C6;
     border-radius: 40px;
     margin-top: 2%;
@@ -220,4 +250,17 @@ h3{
 }
 #inspectionTable tr:last-child td {
     border-bottom: 0;
+}
+#tourneeTable tr:first-child th {
+    border-top: 0;
+}
+#tourneeTable tr:last-child td {
+    border-bottom: 0;
+}
+.en_tete {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Assurez-vous que le z-index est suffisamment élevé pour être au-dessus du contenu de la page */
 }
