--- a/public/css/app.css
+++ b/public/css/app.css
@@ -262,6 +262,17 @@ h3{
     font-weight: bold;
     font-style: italic;
 }
+.rapport{
+    font-size: 20px;
+    font-family: 'Arial';
+}
+.signature{
+    font-size: 20px;
+    font-family: 'Arial';
+    font-weight: bolder;
+    font-style: italic;
+    text-decoration: underline;
+}
 .text-success{
     color: #126712;
     font-weight: bold;
@@ -292,5 +303,5 @@ h3{
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000; /* Assurez-vous que le z-index est suffisamment élevé pour être au-dessus du contenu de la page */
+    z-index: 1000;
 }
